--- a/src/var.css
+++ b/src/var.css
@@ -1,12 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Englebert&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Iceberg&display=swap');
 :root {
     /* Font */
-    --font-englebert: "Englebert", serif;
-  
+    --font-title: "Englebert";
+    --font-subtitle: "Outfit";;
+    --font-para: "Iceberg";
+
     /* Colors */
     --color-1: #FF69B4; /* Hot pink */
     --color-2: #FF00FF; /* Magenta */
     --color-3: #8A2BE2; /* Blue-violet */
     --color-4: #4B0082; /* Indigo */
     --color-5: #FF1493; /* Deep pink */
+
+    --color-text1:#fffFFF;
+    --color-text2:#000000;
+
   }
   
