--- a/src/var.css
+++ b/src/var.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Englebert&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Iceberg&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 :root {
     /* Font */
     --font-title: "Englebert";
     --font-subtitle: "Outfit";;
     --font-para: "Iceberg";
+    --font-logo: "Great Vibes";
 
     /* Colors */
-    --color-1: #FF69B4; /* Hot pink */
+    --color-6: #FF69B4;
+    --color-1: #f0b1d0; /* Hot pink */
     --color-2: #FF00FF; /* Magenta */
     --color-3: #8A2BE2; /* Blue-violet */
     --color-4: #4B0082; /* Indigo */
