--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,10 +3,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full viewport height */
-    background-color: var(--color-1);/* Pink background */
-    color: var(--color-text1); /* White text */
-    text-align: center; /* Center the text */
+    height: 100vh;
+    background-color: var(--color-1);
+    color: var(--color-text1);
+    text-align: center;
+    background-image: radial-gradient(
+      at 88% 40%, rgb(253, 186, 255) 0px, transparent 85%
+    ),
+    radial-gradient(at 49% 30%, rgb(91, 91, 245) 0px, transparent 85%),
+    radial-gradient(at 14% 26%, rgb(182, 182, 234) 0px, transparent 85%),
+    radial-gradient(at 0% 64%, hsla(263, 93%, 56%, 1) 0px, transparent 85%),
+    radial-gradient(at 41% 94%, hsla(284, 100%, 84%, 1) 0px, transparent 85%),
+    radial-gradient(at 100% 99%, hsla(306, 100%, 57%, 1) 0px, transparent 85%);
+  
 }
 
 .home-container h1{
