--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%;
     background-color: var(--color-1);
     color: var(--color-text1);
     text-align: center;
@@ -20,26 +21,28 @@
 
 .home-container h1{
     font-family: var(--font-title); /* Englebert font */
-    font-size: 4rem; /* 48px */
-    margin-bottom: 1rem; /* 16px */
+    font-size: 8vmin; /* 48px */
+    margin-bottom: 1vmin; /* 16px */
+    font-weight: bold;
+    text-align: center;
+}
+
+.welcome-text {
+    color: var(--color-text2);
 }
 
 .home-container p{
     font-family: var(--font-subtitle); /* Roboto font */
-    font-size: 1.5rem;
+    font-size: 3vmin;
+    color: var(--color-text2);
 }
 
-.welcome-text {
-    font-size: 3rem;
-  font-weight: bold;
-  text-align: center;
-}
 
 #changingFont {
-    color: #fdfdfd; /* Highlighted pink color */
-    font-size: 3.5rem;
+    color: #fdfdfd;
+    font-size: vmin;
     font-weight: bold;
-    transition: font-family 0.5s ease; /* Smooth font transition */
+    transition: font-family 0.5s ease; 
 }
 
 
